feat: 新增 Live2D 动态形象与沉浸式聊天，并清理鸿蒙端与无用代码 (#2)
* chore: remove dead code and duplicate assets

Delete code and files that are provably unused. No user-visible
behavior changes.

Android:
- Drop 5 unused imports in MainActivity.kt: rememberLazyListState,
  Icons.AutoMirrored.Rounded.Send, Checkbox, Switch, graphicsLayer.
  Each has zero references outside its import line.
- Remove the retired digital-human entries from the cloud-resource
  cache allowlist: the /vtuber/ and /live2d-models/ path prefixes and
  the .moc3/.wasm/.atlas/.skel extensions. Nothing in the app ever
  constructs such a URL, and the backend already returns 404 for
  /vtuber and /vtuber/. isCacheableCloudResource is only a disk-cache
  allowlist, so dropping entries skips caching at most; every load
  path still fetches directly.

Repository:
- Delete source_app_icon.png and AnyiMemorial-download-qr.png from the
  repo root. Both are byte-identical (verified by SHA-256) to
  website/assets/app-icon.png and website/assets/download-qr.png, and
  nothing references the root copies. The site keeps using the copies
  under website/assets/.

Tests: backend suite 47/47 still passing. The Android change is
limited to unused imports and dead allowlist entries; the Android
build was not run here because this machine has no JDK or Android SDK.

* chore: remove broken HarmonyOS AI companion page

The HarmonyOS client's AI companion page could not work against the
current backend, so remove it rather than ship a dead tab.

Why it was broken (verified against production):
- Its five endpoints /app/digital-human/chat|messages|memories|
  memory-settings no longer exist; production returns HTTP 404 for
  each one.
- It read a digitalHuman field from /app/config to enable itself.
  The backend stopped returning that field, so the feature flag was
  permanently false and the entry button never enabled.

This is a removal, not a repair: the page was built on a retired
single-digital-human API that the backend replaced